--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=4a81f44d74a4cf286bdc3ce4287eea1e
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/masuperagence
+DATABASE_URL=mysql://coco:cocorico@127.0.0.1:3306/masuperagence
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
