--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,7 +22,11 @@ services:
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
         resource: '../src/Controller'
-        tags: ['controller.service_arguments']    
+        tags: ['controller.service_arguments']
+
+    App\Listenner\ImageCacheSubscriber:
+        tags:
+        - { name: doctrine.event_subsriber }
 
 
     # add more service definitions when explicit configuration is needed
