--- a/.env
+++ b/.env
@@ -33,3 +33,4 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/masuperagence
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+MAILER_URL=gmail://pellecuer.david@gmail.com:cqqcoqp2016@localhost
